# boring-ducklake-semantic-fishing-demo

./: .gitignore  README.md  pyproject.toml  testing.ipynb
fill_data_swamp/: README.md  fill_data_swamp_pipeline.py
fill_data_swamp/.dlt/: config.toml  secrets.toml.example
filter_data_swamp/: .gitignore  README.md  boring_mcp_server.py  boring_query_examples.py  boring_sessions_semantic_model.py  duck_lake_party.py  ducks_flock_to_mother.py  filter_data_swamp_pipeline.py
filter_data_swamp/.dlt/: config.toml  secrets.toml.example
filter_data_swamp/data_swamp_models/: .gitignore  dbt_project.yml  profiles.yml
filter_data_swamp/data_swamp_models/models/sources/: sources.yml  src_sessions_fct.sql
